Update image example

--- a/podoc/notebook/test_files/image.ipynb
+++ b/podoc/notebook/test_files/image.ipynb
@@ -34,6 +34,13 @@
     "plt.yticks([])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The end."
+   ]
   }
  ],
  "metadata": {
