WIP: convert HTML output to PNG

--- a/podoc/notebook/test_files/simplenb.ipynb
+++ b/podoc/notebook/test_files/simplenb.ipynb
@@ -69,7 +69,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAO0AAADtCAYAAABTTfKPAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAA7VJREFUeJzt2bGrTmEAx/H36F3FfIsMF5NByshktBpsFpFYDCal/Dfq\nTqZbNkUxyqAoZSWSSen4B+57b8q5z/3W5zOe5xl+y7dz3t5pnucV0HFs9ADg34gWYkQLMaKFGNFC\njGghZr3f4TRN/g+CQeZ5nvZ6vm+0q9Vq9WX31f9fc0R8ePFp9IRFPb6yNXrCom5/fjJ6wmJu3X+5\n8cznMcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsx\nooUY0UKMaCFGtBAjWogRLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQ\nI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogRLcSIFmJECzGihRjRQsz6oAtX7707jB1DPPx2Y/SE\nRZ3983T0hEXd3f0xesIQ3rQQI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogRLcSIFmJECzGihRjR\nQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogR\nLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY\n0ULM+qALly/tHMaOId48ej16wqLenr85esKinv88M3rCYq69f7DxzJsWYkQLMaKFGNFCjGghRrQQ\nI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogRLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQL\nMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogRLcSIFmJECzGihRjRQoxoIUa0\nECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIWR90YXvnzmHsGOLj96+jJyxqPvds9IRFXfh1ffSE\nIbxpIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY0UKMaCFGtBAjWogR\nLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMaKFGNFCjGghRrQQI1qIES3EiBZiRAsxooUY\n0UKMaCFGtBAjWogRLcSIFmJECzGihRjRQoxoIUa0ECNaiBEtxIgWYkQLMeuDLmxdPHkYO4b4sz16\nwbJ+nzo9esKi1sdPjJ4wxDTP8+bDadp8CCxqnudpr+f7RgscPX7TQoxoIUa0ECNaiBEtxPwFrOA0\nepLj5TwAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f205474bf98>"
+       "Output image"
       ]
      },
      "metadata": {},
