Update notebook test file

--- a/podoc/notebook/test_files/simplenb.ipynb
+++ b/podoc/notebook/test_files/simplenb.ipynb
@@ -17,8 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -54,6 +53,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+       "podoc": {
+           "output_text": "Output image"
+       }
    },
    "outputs": [
     {
